# django-zed-rebac

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: ARCHITECTURE.md  ROADMAP.md  SPEC.md  ZED.md
docs/proposals/: 0001-resource-registry.md  0002-evaluator-and-freshness.md  0003-field-read-enforcement.md  0005-field-backed-relations.md
src/rebac/: __init__.py  _id.py  actors.py  admin.py  apps.py  audit.py  caveats.py  checks.py  codenames.py  composition.py  conf.py  consistency.py  decorators.py  drf.py  errors.py  evaluator.py  field_backing.py  field_visibility.py  managers.py  middleware.py  mixins.py  permissions_mixin.py  preflight.py  relation_loading.py  relationships.py  resources.py  roles.py  signals.py  types.py
src/rebac/backends/: __init__.py  auth.py  base.py  local.py  spicedb.py
src/rebac/graphql/: __init__.py  strawberry.py  strawberry_django.py
src/rebac/management/commands/: rebac.py
src/rebac/migrations/: 0001_initial.py  0003_schema_relation_backing.py
src/rebac/models/: __init__.py  audit.py  overrides.py  provenance.py  relationship.py  resource.py  schema.py
src/rebac/schema/: __init__.py  ast.py  parser.py  walker.py
src/zed_rebac/: __init__.py  actors.py  apps.py  checks.py  codenames.py  conf.py  decorators.py  drf.py  errors.py  managers.py  mixins.py  resources.py  signals.py  types.py
src/zed_rebac/backends/: __init__.py  auth.py  base.py  local.py  spicedb.py
src/zed_rebac/management/commands/: zed_rebac.py
src/zed_rebac/migrations/: 0001_initial.py
src/zed_rebac/models/: __init__.py  audit.py  overrides.py  provenance.py  relationship.py  schema.py
src/zed_rebac/schema/: parser.py
tests/: conftest.py  settings.py  test_actors.py  test_audit.py  test_auth_backend.py  test_build_zed.py  test_caveats.py  test_checks_and_conf.py  test_codenames.py  test_consistency.py  test_const_backed_relations.py  test_deprecated_actor_helpers.py  test_evaluator.py  test_field_backed_relations.py  test_field_gates.py  test_field_read_gates.py  test_graphql_strawberry.py  test_graphql_strawberry_django_optimizer.py  test_id_attr.py  test_local_backend.py  test_local_backend_e2e.py  test_local_backend_freshness.py  test_managers.py  test_middleware.py  test_middleware_async.py  test_middleware_evaluator.py  test_mixin.py  test_overrides.py  test_parser.py  test_permissions_mixin.py  test_pickle_posture.py  test_rebac_object_meta.py  test_types.py
tests/testapp/: apps.py  models.py  permissions.zed
tests/testapp/migrations/: 0001_initial.py  0002_sluggedpost_alter_folder_id_alter_post_id.py  0003_authoredpost.py
