[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-zed-rebac"
version = "0.10.0"
description = "Drop-in REBAC engine for Django, SpiceDB-compatible, with a pure-Django LocalBackend."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14"
authors = [{ name = "Apexive", email = "hi@apexive.com" }]
keywords = ["django", "rebac", "spicedb", "zanzibar", "authorization", "permissions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = [
    "django>=6.0",
]

[project.optional-dependencies]
spicedb = ["authzed>=0.13"]
caveats = ["cel-python>=0.1.5"]
drf = ["djangorestframework>=3.14"]
# Strawberry + Channels integration. Channels is a
# subscription-transport prerequisite — Strawberry alone covers HTTP
# GraphQL but WS subscriptions need Channels' ASGI scope handling.
strawberry = [
    "strawberry-graphql>=0.220",
    "channels>=4.0",
]
strawberry-django = [
    "strawberry-graphql-django>=0.86.0",
]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.5",
    "mypy>=1.10",
    "pyright>=1.1.350",
    "django-stubs[compatible-mypy]>=5.1",
    "django-stubs-ext>=5.1",
    "strawberry-graphql-django>=0.86.0",
]

[project.urls]
Homepage = "https://github.com/fyltr/django-zed-rebac"
Documentation = "https://github.com/fyltr/django-zed-rebac/tree/main/docs"
Issues = "https://github.com/fyltr/django-zed-rebac/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rebac*"]

[tool.setuptools.package-data]
rebac = ["py.typed"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:django.*",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["mypy_django_plugin.main"]
# Generated migration files are not hand-written; Django's Migration base
# uses class-level ``dependencies`` / ``operations`` that trip strict's
# class-var-vs-instance-var check.
exclude = ["build/", ".*/migrations/.*"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pyright]
# pyright has no django-stubs plugin, so it resolves Django types from the
# stub package alone and needs the project venv to find Django at all.
include = ["src"]
exclude = ["**/migrations/**"]
venvPath = "."
venv = ".venv"

[[tool.mypy.overrides]]
module = [
    "authzed.*",
    "celery.*",
    "rest_framework.*",
    "cel.*",
    "strawberry.*",
    "strawberry_django.*",
    "channels.*",
]
ignore_missing_imports = true

# Tests are type-checked, but the per-test ``-> None`` return annotation
# and typed-fixture-param ceremony adds churn without catching bugs.
# Keep every value-checking rule (attr-defined, arg-type, union-attr,
# misc, …) active; only relax the "annotate every def" requirements.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
check_untyped_defs = true


[tool.ruff.lint.per-file-ignores]
# Lazy `__getattr__` shim plus grouped (not alphabetised) `__all__` is intentional;
# see CLAUDE.md § "Don't import ZedRBACMixin from `__init__.py` eagerly".
"src/rebac/__init__.py" = ["E402", "RUF022"]
# Django Meta options (indexes, constraints, ordering, operations) MUST be class-level
# lists/sets/tuples — that's the framework's convention.
"src/rebac/admin.py" = ["RUF012"]
"src/rebac/models/*.py" = ["RUF012"]
"src/rebac/migrations/*.py" = ["RUF012"]
"tests/testapp/migrations/*.py" = ["I001", "RUF012"]
